[package]
name = "photo-editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29.0.1"
winit = "0.30.13"
log = "0.4.29"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["Response"] }
js-sys = "0.3.95"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
pollster = "0.4.0"