[package]
name = "photo-editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "photo-editor-app"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", default-features = true }
egui = "0.34"
log = "0.4.29"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck"] }
image = "0.25.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
